# ghc-stdin

./: .gitignore  Changelog.md  GhcStdin.hs  LICENSE  README.md  ghc-stdin.cabal
.github/workflows/: ci.yml
