name:                  ghc-stdin
version:               0.2.1.0
synopsis:              Compile source code from the standard input
description:           A frontend plugin for GHC to compile source code from
                       the standard input.
homepage:              http://github.com/lyokha/ghc-stdin
license:               BSD3
license-file:          LICENSE
extra-doc-files:       Changelog.md, README.md
author:                Alexey Radkov <alexey.radkov@gmail.com>
maintainer:            Alexey Radkov <alexey.radkov@gmail.com>
stability:             experimental
copyright:             2022-2025 Alexey Radkov
category:              Development
bug-reports:           https://github.com/lyokha/ghc-stdin/issues
build-type:            Simple
cabal-version:         1.20

source-repository head
  type:                git
  location:            https://github.com/lyokha/ghc-stdin.git

library
  default-language:    Haskell2010
  build-depends:       base >= 4.15.0.0 && < 5,
                       ghc >= 9.0.2,
                       ghc-paths,
                       bytestring,
                       temporary,
                       process

  exposed-modules:     GhcStdin

  ghc-options:        -Wall

